[Enterprise Search] Add connectors indices and ent-search pipeline on startup