@@ -53,6 +53,7 @@ import org.elasticsearch.xpack.application.analytics.action.TransportGetAnalytic
 import org.elasticsearch.xpack.application.analytics.action.TransportPostAnalyticsEventAction;
 import org.elasticsearch.xpack.application.analytics.action.TransportPutAnalyticsCollectionAction;
 import org.elasticsearch.xpack.application.analytics.ingest.AnalyticsEventIngestConfig;
+import org.elasticsearch.xpack.application.connector.ConnectorTemplateRegistry;
 import org.elasticsearch.xpack.application.rules.QueryRulesIndexService;
 import org.elasticsearch.xpack.application.rules.action.DeleteQueryRulesetAction;
 import org.elasticsearch.xpack.application.rules.action.GetQueryRulesetAction;
@@ -108,7 +109,6 @@ public class EnterpriseSearch extends Plugin implements ActionPlugin, SystemInde
     public static final String QUERY_RULES_API_ENDPOINT = "_query_rules";
 
     private static final Logger logger = LogManager.getLogger(EnterpriseSearch.class);
-
     public static final String FEATURE_NAME = "ent_search";
 
     private final boolean enabled;
@@ -228,7 +228,16 @@ public class EnterpriseSearch extends Plugin implements ActionPlugin, SystemInde
         );
         analyticsTemplateRegistry.initialize();
 
-        return List.of(analyticsTemplateRegistry);
+        // Connector components
+        final ConnectorTemplateRegistry connectorTemplateRegistry = new ConnectorTemplateRegistry(
+            clusterService,
+            threadPool,
+            client,
+            xContentRegistry
+        );
+        connectorTemplateRegistry.initialize();
+
+        return Arrays.asList(analyticsTemplateRegistry, connectorTemplateRegistry);
     }
 
     @Override
